apps/staging/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bazarr.christophervestman.com
      secretName: bazarr-tls
  rules:
    - host: bazarr.christophervestman.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
